--- a/dapp/locales/zh-CN.json
+++ b/dapp/locales/zh-CN.json
@@ -17,9 +17,9 @@
   "not_apply": "未申请",
   "set_address": "设置钱包地址（点击可修改）:",
   "goto_qq": {
-    "content1": "请去QQ群",
-    "content2": "6238210712",
-    "content3": "（点击复制群号申请）"
+    "content1": "请加QQ",
+    "content2": "454684602",
+    "content3": "（点击复制申请）"
   },
   "message": {
     "querying": "查询中"
